--- a/src/main/resources/templates/together/board/view.html
+++ b/src/main/resources/templates/together/board/view.html
@@ -126,7 +126,7 @@
       }
 
       modalFooterButton.setAttribute("method","post")
-      modalTitle.textContent = type + ' 삭제 ' + modalForm.getAttribute("action")
+      modalTitle.textContent = type + ' 삭제 '
       modalBodyInput.textContent = type + '을 삭제하시겠습니까?'
 
     })
