--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/node_modules/@yaireo/tagify/dist/tagify.css"/>
-    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.css" rel="stylesheet">
+    <link href="/node_modules/summernote/dist/summernote-bs4.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/node_modules/fullcalendar/main.min.css"/>
     <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
     <script src="/node_modules/fullcalendar/main.min.js"></script>
@@ -16,6 +16,7 @@
     <script src="/node_modules/jdenticon/dist/jdenticon.min.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.js"></script>
+    <script src="/node_modules/summernote/lang/summernote-ko-KR.js"></script>
     <style>
         body{
             background-color: whitesmoke;
@@ -54,6 +55,15 @@
             height: 20px;
             z-index: 400;
         }
+        ul.pagination li:not(.active) a{
+            color: gray !important;
+        }
+
+        ul.pagination li.active a{
+            background-color: gray !important;
+            color: black;
+        }
+
         .tagify--outside{
             border: 0;
         }
@@ -63,6 +73,12 @@
             border: 1px solid var(--tags-border-color);
             margin-bottom: 1em;
             transition: .1s;
+        }
+        .text-shadow{
+            text-shadow: -1px 0 #000,
+            0 1px #000,
+            1px 0 #000,
+            0 -1px #000;
         }
 
         .tagify--outside .tagify__input:hover{ border-color:var(--tags-hover-border-color); }
@@ -135,11 +151,11 @@
                 </div>
                 <div sec:authorize="isAuthenticated()">
                     <a id="accountmenu" class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                        <span class="navbar-toggler-icon" th:if="${newNotice}">
+                        <span class="navbar-toggler-icon" th:if="${!newNotice}">
                             <svg th:if="${#strings.isEmpty(account?.profileImage)}" th:data-jdenticon-value="${#authentication.name}" width="32" height="32" class="rounded border bg-light"></svg>
                             <img th:if="${!#strings.isEmpty(account?.profileImage)}" th:src="${account.getProfileImage()}" width="32" height="32" class="rounded border">
                         </span>
-                        <span class="navbar-toggler-icon" th:if="${!newNotice}">
+                        <span class="navbar-toggler-icon" th:if="${newNotice}">
                             <svg th:if="${#strings.isEmpty(account?.profileImage)}" th:data-jdenticon-value="${#authentication.name}" width="32" height="32" class="rounded border border-danger bg-light"></svg>
                             <img th:if="${!#strings.isEmpty(account?.profileImage)}" th:src="${account.getProfileImage()}" width="32" height="32" class="rounded border border-danger">
                         </span>
@@ -267,7 +283,7 @@
                         dataType: 'json',
                         success: function (data) {
                             if (data[0] == null)
-                                togetherList.insertAdjacentHTML("beforeend", "<h4 class='text-black'>만든 투게더가 없습니다.</h4>")
+                                createTogetherList.insertAdjacentHTML("beforeend", "<h4 class='text-black'>만든 투게더가 없습니다.</h4>")
                             $.each(data, function (index, value) {
                                 createTogetherList.insertAdjacentHTML("beforeend", "<a class='dropdown-item' id='createlist" + value.path + "'>" + value.title + "</a>")
                                 var tagetherLink = document.querySelector("#createlist" + value.path)
@@ -427,40 +443,59 @@
 </div>
 <div th:fragment="together-info" class="d-flex flex-row pt-4">
     <div class="p-2 flex-grow-1 bd-highlight">
-        <a class="text-decoration-none" th:href="@{'/together/' + ${together.path}}">
-            <span class="h1" th:text="${together.title}">투게더 이름</span>
-        </a>
-    </div>
-    <div class="text-right justify-content-end mt-5">
-        <span class="d-inline-block">
-            <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" th:text="*{together.togetherType.getKrName}" disabled></button>
-        </span>
-        <span th:if="${!together.published}" class="d-inline-block">
-                    <button class="btn btn-warning btn-sm" style="pointer-events: none;" type="button" disabled></button>
-        </span>
-        <span th:if="${together.closed}" class="d-inline-block">
-                    <button class="btn btn-warning btn-sm" style="pointer-events: none;" type="button" disabled>종료됨</button>
-        </span>
-        <span sec:authorize="isAuthenticated()" th:if="${together.isJoinable(#authentication.principal)}"
-              class="btn-group" role="group" aria-label="Basic example">
-                    <a class="btn btn-primary" th:href="@{'/together/' + ${together.path} + '/join'}">
-                        투게더 가입신청
-                    </a>
-        </span>
-        <span sec:authorize="isAuthenticated()" th:if="${together.isCondidate(#authentication.principal)}"
-              class="btn-group" role="group" aria-label="Basic example">
-                    <a class="btn btn-primary">
-                        가입신청 완료
-                    </a>
-        </span>
-        <span sec:authorize="isAuthenticated()"
-              th:if="${!together.closed && together.isMember(#authentication.principal)}" class="btn-group" role="group">
-                    <a class="btn btn-outline-warning" th:href="@{'/together/' + ${together.path} + '/leave'}">
-                        투게더 탈퇴
-                    </a>
-                    <a class="btn btn-outline-primary" th:href="@{'/together/' + ${together.path} + '/members'}"
-                       th:text="${together.members.size()}"></a>
-        </span>
+        <div th:if="${together.useBanner}">
+            <img th:if="${together.banner == null}" src="/images/DefualtTogetherBanner.png" height="152px" class="d-block w-100">
+            <img th:if="${together.banner != null}" th:src="${together.banner}" height="152px" class="d-block w-100">
+        </div>
+        <div class="d-flex">
+            <div class="col-8">
+            <a class="text-decoration-none" th:href="@{'/together/' + ${together.path}}">
+                <span class="h1" th:text="${together.title}">투게더 이름</span>
+            </a>
+            </div>
+            <div class="col-4 text-end mt-2">
+                <span class="d-inline-block">
+                    <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" th:text="*{together.togetherType.getKrName}" disabled></button>
+                </span>
+                        <span th:if="${!together.published}" class="d-inline-block">
+                            <button class="btn btn-warning btn-sm" style="pointer-events: none;" type="button" disabled></button>
+                </span>
+                        <span th:if="${together.closed}" class="d-inline-block">
+                            <button class="btn btn-warning btn-sm" style="pointer-events: none;" type="button" disabled>종료됨</button>
+                </span>
+                        <span sec:authorize="isAuthenticated()" th:if="${together.isJoinable(#authentication.principal)}"
+                              class="btn-group" role="group" aria-label="Basic example">
+                            <a class="btn btn-primary" th:href="@{'/together/' + ${together.path} + '/join'}">
+                                투게더 가입신청
+                            </a>
+                </span>
+                        <span sec:authorize="isAuthenticated()" th:if="${together.isCondidate(#authentication.principal)}"
+                              class="btn-group" role="group" aria-label="Basic example">
+                            <a class="btn btn-primary">
+                                가입신청 완료
+                            </a>
+                </span>
+                        <span sec:authorize="isAuthenticated()"
+                              th:if="${!together.closed && together.isMember(#authentication.principal)}" class="btn-group" role="group">
+                            <a class="btn btn-outline-warning" th:href="@{'/together/' + ${together.path} + '/leave'}">
+                                투게더 탈퇴
+                            </a>
+                            <a class="btn btn-outline-primary" th:href="@{'/together/' + ${together.path} + '/members'}"
+                               th:text="${together.members.size()}"></a>
+                </span>
+            </div>
+        </div>
+        <div class="mt-3">
+            <span th:if="${together.tags.size() == 0} and ${together.zones.size() == 0}" class="d-inline-block">
+                <button class="btn btn-outline-dark btn-sm" th:text="${'주제없음'}" style="pointer-events: none;" type="button" disabled></button>
+            </span>
+            <span th:each="tag: ${together.tags}" class="d-inline-block">
+                <button class="btn btn-outline-dark btn-sm" th:text="${tag.title}" style="pointer-events: none;" type="button" disabled></button>
+            </span>
+            <span th:each="zone: ${together.zones}" class="d-inline-block">
+                <button class="btn btn-outline-dark btn-sm" th:text="${zone.city}" style="pointer-events: none;" type="button" disabled></button>
+            </span>
+        </div>
     </div>
 </div>
 <div th:fragment="together-menu (togetherMenu)" class="row px-3 justify-content-center fs-5">
@@ -495,7 +530,23 @@
 <div th:fragment="editior-script">
     <script type="application/javascript">
         $(document).ready(function() {
-            $('#longIntroduce').summernote();
+            $('#longIntroduce').summernote({
+                lang: 'ko-KR',
+                height: 300,
+                colors: [
+                    ['red', 'green', 'blue'],
+                    ['#c4b540', '#1dd381', '#ba1cd2']
+                ],
+                toolbar: [
+                    ['style', ['style']],
+                    ['font', ['bold', 'underline', 'clear']],
+                    ['color', ['color']],
+                    ['para', ['ul', 'ol', 'paragraph']],
+                    ['table', ['table']],
+                    ['insert', ['link', 'picture', 'video']],
+                    ['view', ['fullscreen', 'codeview', 'help']]
+                ]
+                });
         });
     </script>
 </div>
