--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -20,7 +20,8 @@
             <div class="row">
                 <div class="col-md-4" th:each="together: ${togetherPage.getContent()}">
                     <div class="card mb-4 shadow-sm">
-                        <img th:src="${together.banner}" class="context card-img-top" th:alt="${together.banner}">
+                        <img src="/images/DefualtTogetherBanner.png" th:if="${together.banner == null}" class="context card-img-top" th:alt="${together.banner}">
+                        <img th:src="${together.banner}" th:if="${together.banner != null}" class="context card-img-top" th:alt="${together.banner}">
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-center">
                             <a th:href="@{'/together/' + ${together.path}}" class="text-decoration-none">
@@ -45,7 +46,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <small class="text-muted">
                                     <i class="fa fa-user-circle"></i>
-                                    <span th:text="${together.members.size()}"></span>명
+                                    <span th:text="${together.numberOfPeople()}"></span>명
                                 </small>
                                 <small class="text-muted date" th:text="${together.publishedDateTime}"></small>
                             </div>
