--- a/src/main/resources/templates/together/board/board.html
+++ b/src/main/resources/templates/together/board/board.html
@@ -9,13 +9,40 @@
     <div th:replace="fragments.html :: together-info"></div>
     <div th:replace="fragments.html :: together-menu (board)"></div>
     <ul class="list-group">
+        <li class="list-group-item d-flex flex-row" th:each="post: ${noticePost}">
+            <div class="row">
+                <div>
+                    <button class="btn btn-outline-info btn-sm" style="pointer-events: none;" type="button" th:text="${post.postType.krName}" disabled></button>
+                </div>
+                <div>
+                    <button class="btn btn-outline-secondary btn-sm" style="pointer-events: none;" type="button" th:text="${post.view}" disabled></button>
+                </div>
+            </div>
+            <div class="col-md-7 themed-grid-col">
+                <div class="fs-5">
+                    <span style="color: lightslategrey" th:text="${post.writer.nickname}"></span>
+                </div>
+                <div class="d-flex gap-2 justify-content-start">
+                    <a class="h3" th:text="${post.title}" th:href="@{'/together/' + ${together.path} + '/board/' + ${post.id}}">
+                    </a>
+                    <h5 style="color: dimgray" th:text=" '[' + ${post.comments.size() + ']'}"></h5>
+                </div>
+            </div>
+            <div class="col-md-4 d-flex justify-content-end">
+                <div class="d-flex">
+                    <h6 class="calendar" th:text="${post.reportingDate}"></h6>
+                </div>
+            </div>
+        </li>
+    </ul>
+    <ul class="list-group">
         <li class="list-group-item d-flex flex-row" th:each="post: ${postPage.getContent()}">
             <div class="row">
             <div>
-                <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" th:text="${post.postType.krName}" disabled></button>
+                <button class="btn btn-light btn-sm" style="pointer-events: none;" type="button" th:text="${post.postType.krName}" disabled></button>
             </div>
             <div>
-                <button class="btn btn-primary btn-sm" style="pointer-events: none;" type="button" th:text="${post.view}" disabled></button>
+                <button class="btn btn-outline-secondary btn-sm" style="pointer-events: none;" type="button" th:text="${post.view}" disabled></button>
             </div>
             </div>
             <div class="col-md-7 themed-grid-col">
@@ -36,7 +63,7 @@
         </li>
     </ul>
     <div class="row justify-content-center">
-        <div class="text-center h3" th:if="${postPage.getTotalElements() == 0}" th:text="${'검색 결과가 없습니다.'}"></div>
+        <div class="text-center h3" th:if="${postPage.getTotalElements() == 0}" th:text="${'게시글이 존재하지 않습니다.'}"></div>
         <div class="col-sm-10">
             <nav>
                 <ul class="pagination justify-content-center">
@@ -52,8 +79,7 @@
                         <a th:href="@{'/together/'+${together.path}+'/board?page=' + ${i}}" class="page-link" th:text="${i+1}"></a>
                     </li>
                     <li class="page-item" th:classappend="${!postPage.hasNext()}? disabled">
-                        <a th:href="@{'/together/'+${together.path}+'/board?page=' + ${postPage.getNumber() + 1}}"
-                           class="page-link">
+                        <a th:href="@{'/together/'+${together.path}+'/board?page=' + ${postPage.getNumber() + 1}}" class="page-link">
                             Next
                         </a>
                     </li>
