--- a/src/main/resources/templates/together/settings.html
+++ b/src/main/resources/templates/together/settings.html
@@ -24,6 +24,30 @@
             <button class="btn btn-outline-primary btn-block" type="submit" aria-describedby="submitHelp">배너 이미지 사용하지 않기</button>
         </div>
     </form>
+    <form id="imageForm" th:action="@{'/together/' + ${together.getPath()} + '/settings/banner'}" method="post" novalidate>
+        <div class="form-group">
+            <input id="togetherImage" type="hidden" name="image" class="form-control" />
+        </div>
+    </form>
+    <div class="card text-center" th:if="${together.useBanner}">
+        <div id="current-together-image" class="mt-3">
+            <img class="rounded" th:if="${together.banner != null}" th:src="${together.banner}" width="640" alt="name" th:alt="${together.title}"/>
+        </div>
+        <div id="new-together-image" class="mt-3"></div>
+        <div class="card-body">
+            <div class="custom-file">
+                <input type="file" class="custom-file-input" id="together-image-file">
+                <label class="custom-file-label" for="together-image-file">투게더 배너 변경</label>
+            </div>
+            <div id="new-together-image-control" class="mt-3">
+                <button class="btn btn-outline-primary btn-block" id="cut-button">자르기</button>
+                <button class="btn btn-outline-success btn-block" id="confirm-button">확인</button>
+                <button class="btn btn-primary btn-block" id="save-button">저장</button>
+                <button class="btn btn-outline-warning btn-block" id="reset-button">취소</button>
+            </div>
+            <div id="cropped-new-together-image" class="mt-3"></div>
+        </div>
+    </div>
     <form th:if="${!together.published && !together.closed}" th:action="@{'/together/' + ${together.getPath()} + '/settings/publish'}" method="post" novalidate>
         <div class="alert alert-info mt-3" role="alert">
             투게더를 다른 사용자에게 공개할 준비가 되었다면 버튼을 클릭하세요.<br/>
@@ -75,5 +99,100 @@
 <div th:replace="fragments.html :: footer"></div>
 <div th:replace="fragments.html :: update-tags (baseUrl='/together/'+${together.getPath()} + '/settings')"></div>
 <div th:replace="fragments.html :: update-zones (baseUrl='/together/'+${together.getPath()} + '/settings')"></div>
+<link href="/node_modules/cropper/dist/cropper.min.css" rel="stylesheet">
+<script src="/node_modules/cropper/dist/cropper.min.js"></script>
+<script src="/node_modules/jquery-cropper/dist/jquery-cropper.min.js"></script>
+<script type="application/javascript">
+    $(function() {
+        cropper = '';
+        let $confirmBtn = $("#confirm-button");
+        let $resetBtn = $("#reset-button");
+        let $cutBtn = $("#cut-button");
+        let $saveBtn = $("#save-button");
+        let $newtogetherImage = $("#new-together-image");
+        let $currenttogetherImage = $("#current-together-image");
+        let $resultImage = $("#cropped-new-together-image");
+        let $togetherImage = $("#togetherImage");
+
+        $newtogetherImage.hide();
+        $cutBtn.hide();
+        $resetBtn.hide();
+        $confirmBtn.hide();
+        $saveBtn.hide();
+
+        $("#together-image-file").change(function(e) {
+            if (e.target.files.length === 1) {
+                const reader = new FileReader();
+                reader.onload = e => {
+                    if (e.target.result) {
+                        if (!e.target.result.startsWith("data:image")) {
+                            alert("이미지 파일을 선택하세요.");
+                            return;
+                        }
+
+                        let img = document.createElement("img");
+                        img.id = 'new-together';
+                        img.src = e.target.result;
+                        img.setAttribute('width', '100%');
+
+                        $newtogetherImage.html(img);
+                        $newtogetherImage.show();
+                        $currenttogetherImage.hide();
+
+                        let $newImage = $(img);
+                        $newImage.cropper({aspectRatio: 13/2});
+                        cropper = $newImage.data('cropper');
+
+                        $cutBtn.show();
+                        $confirmBtn.hide();
+                        $resetBtn.show();
+                    }
+                };
+
+                reader.readAsDataURL(e.target.files[0]);
+            }
+        });
+
+        $resetBtn.click(function() {
+            $currenttogetherImage.show();
+            $newtogetherImage.hide();
+            $resultImage.hide();
+            $resetBtn.hide();
+            $cutBtn.hide();
+            $confirmBtn.hide();
+            $saveBtn.hide();
+            $togetherImage.val('');
+        });
+
+        $cutBtn.click(function () {
+            let dataUrl = cropper.getCroppedCanvas().toDataURL();
+
+            if (dataUrl.length > 1000 * 1024) {
+                alert("이미지 파일이 너무 큽니다. 1024000 보다 작은 파일을 사용하세요. 현재 이미지 사이즈 " + dataUrl.length);
+                return;
+            }
+
+            let newImage = document.createElement("img");
+            newImage.id = "cropped-new-together-image";
+            newImage.src = dataUrl;
+            newImage.width = 640;
+            $resultImage.html(newImage);
+            $resultImage.show();
+            $confirmBtn.show();
+
+            $confirmBtn.click(function () {
+                $newtogetherImage.html(newImage);
+                $cutBtn.hide();
+                $confirmBtn.hide();
+                $togetherImage.val(dataUrl);
+                $saveBtn.show();
+            });
+        });
+
+        $saveBtn.click(function() {
+            $("#imageForm").submit();
+        })
+    });
+</script>
 </body>
 </html>
